--- a/ClassJSD/JS/js101/index.html
+++ b/ClassJSD/JS/js101/index.html
@@ -4,18 +4,11 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>Javascript101</title>
+    <script src="./script.js"></script>
   </head>
   <body>
     <div id="printworld"></div>
     <button onclick="showalert()">Click ME!</button>
-    <script>
-      function showalert() {
-        alert("Helloworld");
-        console.log("button has been clicked");
-        document.getElementById("printworld").innerText =
-          "buttons has been clicked";
-      }
-    </script>
   </body>
 </html>
