Excursion CSS update

--- a/Codecademy/excursion/index.html
+++ b/Codecademy/excursion/index.html
@@ -27,5 +27,9 @@
     <img src="./resources/images/phone.webp" alt="iphone 7 icon" />
     <h2>Coming Soon for iPhone and Android</h2>
     <p><a href="#">Download Excursion (Coming soon!)</a></p>
+
+    <footer>
+      <p>© Excursion</p>
+    </footer>
   </body>
 </html>
